Trade_coin: orderBook -  orderlist-container2 bid-light finish - Update html, css and add demo25

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -595,7 +595,132 @@
                                                 style="transform: translateX(-0.0501048%); left: 100%;"></div>
                                         </div>
                                     </div>
-                                    
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 160px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27324.87
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.54001</div>
+                                                <div class="text" style="text-align: right;">14,755.70305</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-61.4933%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 180px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27324.86
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.20000</div>
+                                                <div class="text" style="text-align: right;">5,464.97200</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-22.7749%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 200px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27324.85
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.90000</div>
+                                                <div class="text" style="text-align: right;">24,592.36500</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-100%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 220px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27323.74
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00069</div>
+                                                <div class="text" style="text-align: right;">18.85338</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-0.0785734%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 240px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27323.60
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.04988</div>
+                                                <div class="text" style="text-align: right;">1,362.90117</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-5.68006%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 260px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27323.45
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.54899</div>
+                                                <div class="text" style="text-align: right;">15,000.30082</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-62.5159%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 280px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27323.26
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.12002</div>
+                                                <div class="text" style="text-align: right;">3,279.33767</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-13.6672%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 300px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27323.25
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.05200</div>
+                                                <div class="text" style="text-align: right;">1,420.80900</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-5.92147%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 320px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27323.19
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00069</div>
+                                                <div class="text" style="text-align: right;">18.85300</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-0.0785734%); left: 100%;"></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             
