--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -837,9 +837,10 @@ i {
 }
 .market-header-up input{
     font-size: 12px;
-    margin-top: -2px;
     height: 18px;
+    width: 100%;
     border-radius: 4px;
+    border: none;
     background-color: inherit;
 }
 .market-header-down{
