Trade_coin: Market - add right arrow into name- coin bar in header - Update html, css and add demo30

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -754,12 +754,18 @@
                                             fill="none" class="css-cz890n">
                                             <path fill-rule="evenodd" clip-rule="evenodd"
                                                 d="M11.173 3.007L12.768 3l2.41 5.11 5.326.831.496 1.495-3.89 4.013.895 5.636-1.298.915-4.735-2.648L7.236 21l-1.296-.923.946-5.632L3 10.436l.496-1.495 5.322-.83 2.355-5.104z"
-                                                fill="currentColor"></path>
+                                                fill="currentColor">
+                                            </path>
                                         </svg>
-                                        
                                     </div>
                                 </div>
                             </div>
+                            <div class="right-arrow" style="z-index: 3;"><svg xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24" fill="none" class="css-1icskq0">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                        fill="currentColor"></path>
+                                </svg></div>
                         </div>
                     </div>
                 </div>
