--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -749,16 +749,21 @@
                         <div class="market-name-coin">
                             <div class="container">
                                 <div class="tabBtn">
-                                    <div class="star">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                    <div class="star"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
                                             fill="none" class="css-cz890n">
                                             <path fill-rule="evenodd" clip-rule="evenodd"
                                                 d="M11.173 3.007L12.768 3l2.41 5.11 5.326.831.496 1.495-3.89 4.013.895 5.636-1.298.915-4.735-2.648L7.236 21l-1.296-.923.946-5.632L3 10.436l.496-1.495 5.322-.83 2.355-5.104z"
-                                                fill="currentColor">
-                                            </path>
-                                        </svg>
-                                    </div>
+                                                fill="currentColor"></path>
+                                        </svg></div>
                                 </div>
+                                <div class="tabBtn">Margin</div>
+                                <div class="tabBtn">USDT</div>
+                                <div class="tabBtn">BUSD</div>
+                                <div class="tabBtn">BNB</div>
+                                <div class="tabBtn active">BTC</div>
+                                <div class="tabBtn">ALTS</div>
+                                <div class="tabBtn">FIAT</div>
+                                <div class="tabBtn">Zones</div>
                             </div>
                             <div class="right-arrow" style="z-index: 3;"><svg xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 0 24 24" fill="none" class="css-1icskq0">
