--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -772,6 +772,14 @@
                                         fill="currentColor"></path>
                                 </svg></div>
                         </div>
+                        <div class="market-tbheader">
+                            <div class="wrap-item">
+                                <div class="item">
+                                    <div class="text">Pair</div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="sort-up-icon css-lid1rh"><path opacity="0.5" d="M16 12.85v1.65L12.75 18 9.5 14.5v-1.65H16z" fill="#848E9C"></path><path d="M9.5 9.745v-1.65l3.25-3.5 3.25 3.5v1.65H9.5z" fill="url(#sorting-up-color-s24_svg__paint0_linear)"></path><defs><linearGradient id="sorting-up-color-s24_svg__paint0_linear" x1="16" y1="4.594" x2="9.5" y2="4.594" gradientUnits="userSpaceOnUse"><stop stop-color="#EFB80B"></stop><stop offset="1" stop-color="#FBDA3C"></stop></linearGradient></defs></svg>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="trades"></div>
