--- a/templates/academy.html
+++ b/templates/academy.html
@@ -872,8 +872,35 @@
                     </div>
                 </div>
             </div>
+            <div id="blockchain_1">
+                <div id="check">
+                    <div id="clone_check">
+                        <div id="item_check">
+                            <div id="img_check">
+                                <img src="../static/img/academy/illus-glossary.svg" alt="">
+                            </div>
+                            <div id="text_check">
+                                <h2>Lost in all the crypto slang?</h2>
+                                <p>Take a closer look at our blockchain & crypto glossary.</p>
+                                <a href="/en/glossary/">
+                                    <div id="check_out">Check out Glossary</div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="clone_check_1">
+                        <div id="item_check_1">
+
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
         </div>
-        <div id="below"></div>
+        <div id="below">
+
+        </div>
     </div>
 </body>
 
