Trade_coin: Market - add sort by change+icon to finish tbHeader - Update html, css and add demo34

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -785,7 +785,13 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="sort-up-icon css-lid1rh"><path opacity="0.5" d="M16 12.85v1.65L12.75 18 9.5 14.5v-1.65H16z" fill="#848E9C"></path><path d="M9.5 9.745v-1.65l3.25-3.5 3.25 3.5v1.65H9.5z" fill="url(#sorting-up-color-s24_svg__paint0_linear)"></path><defs><linearGradient id="sorting-up-color-s24_svg__paint0_linear" x1="16" y1="4.594" x2="9.5" y2="4.594" gradientUnits="userSpaceOnUse"><stop stop-color="#EFB80B"></stop><stop offset="1" stop-color="#FBDA3C"></stop></linearGradient></defs></svg>
                                 </div>
                             </div>
-                           
+                            <div class="wrap-item" style="justify-content: flex-end;">
+                                <div class="item">
+                                    <div class="text">Change</div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="sort-up-icon css-lid1rh"><path opacity="0.5" d="M16 12.85v1.65L12.75 18 9.5 14.5v-1.65H16z" fill="#848E9C"></path><path d="M9.5 9.745v-1.65l3.25-3.5 3.25 3.5v1.65H9.5z" fill="url(#sorting-up-color-s24_svg__paint0_linear)"></path><defs><linearGradient id="sorting-up-color-s24_svg__paint0_linear" x1="16" y1="4.594" x2="9.5" y2="4.594" gradientUnits="userSpaceOnUse"><stop stop-color="#EFB80B"></stop><stop offset="1" stop-color="#FBDA3C"></stop></linearGradient></defs></svg>
+                                </div>
+                                <svg class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="css-d1kzhw"><path d="M9.1 13.11L3.88 7.89l1.41-1.41 3.82-3.82 1.41 1.41L7.7 6.89h11.78v2H7.7l2.81 2.8-1.41 1.42zM14.88 10.89l5.21 5.22-1.41 1.41-3.81 3.82-1.41-1.41 2.82-2.82H4.5v-2h11.78l-2.81-2.8 1.41-1.42z" fill="currentColor"></path></svg>
+                            </div>
                         </div>
                     </div>
                 </div>
