--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -957,3 +957,8 @@ i {
     width: 1em;
     height: 1em;
 }
+.market-tbheader .svg{
+    margin: 2px 0px 0px;
+    font-size: 16px;
+    cursor: pointer;
+}
