bootstrap_update-html-css_blockchain_1-clone_check_1-effec_titem(right)_demo:hinh36...

--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -42,7 +42,7 @@ a {
     text-decoration: none;
 }
 
-html body {
+body {
     font-family: "Binance Plex", -apple-system, BlinkMacSystemFont, Arial, "Helvetica Neue", sans-serif;
     text-rendering: optimizelegibility;
     font-family: BinancePlex, Arial, sans-serif!important;
@@ -1598,12 +1598,13 @@ html body {
 }
 
 #blockchain_1 {
-    max-width: 1136px;
+    max-width: 1100px;
     padding: 56px 16px;
     margin: auto;
 }
 
 #check {
+    height: 380px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 16px;
@@ -1666,12 +1667,7 @@ html body {
 }
 
 #clone_check_1 {
-    border-radius: 16px;
-    background-color: rgb(43, 47, 54);
-    color: rgb(255, 255, 255);
-}
-
-#item_check_1 {
+    padding: 300px 40px 48px;
     padding-top: 48px;
     min-height: 250px;
     border-radius: 16px;
@@ -1681,4 +1677,60 @@ html body {
     background-repeat: no-repeat;
     background-size: 263px;
     color: rgb(255, 255, 255);
+}
+
+#item_check_1 {
+    height: 100%;
+    align-items: center;
+    display: flex;
+}
+
+#text_check_1 {
+    margin-left: 263px;
+    text-align: start;
+}
+
+#text_check_1 h2 {
+    color: rgb(255, 255, 255);
+    margin-bottom: 16px;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 40px;
+}
+
+#text_check_1 p {
+    font-size: 16px;
+    font-weight: 400;
+    color: rgb(230, 232, 234);
+    line-height: 1.75;
+    margin-bottom: 24px;
+}
+
+#text_check_1 a {
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    color: rgb(240, 185, 11);
+}
+
+#check_live {
+    align-items: center;
+    border: 0px solid transparent;
+    font-weight: 500;
+    outline: 0px;
+    font-size: 15px;
+    height: 40px;
+    line-height: 20px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 8px;
+    display: inline-flex;
+    justify-content: center;
+    background-image: linear-gradient(rgb(248, 209, 47) 0%, rgb(240, 185, 11) 100%);
+    color: rgb(20, 21, 26);
+}
+
+#check_live:hover {
+    background-image: linear-gradient(rgb(252, 221, 97) 0%, rgb(252, 218, 109) 100%);
+    color: rgb(20, 21, 26);
 }
