--- a/templates/academy.html
+++ b/templates/academy.html
@@ -890,7 +890,13 @@
                     </div>
                     <div id="clone_check_1">
                         <div id="item_check_1">
-
+                            <div id="text_check_1">
+                                <h2>Up for more learning materials?</h2>
+                                <p>Watch Academy AMA, interviews, and online courses in Binance Live</p>
+                                <a href="" id="">
+                                    <div id="check_live">Check the Binance Academy Live Channel</div>
+                                </a>
+                            </div>
                         </div>
 
                     </div>
