--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -776,21 +776,92 @@
                             <div class="wrap-item">
                                 <div class="item">
                                     <div class="text">Pair</div>
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="sort-up-icon css-lid1rh"><path opacity="0.5" d="M16 12.85v1.65L12.75 18 9.5 14.5v-1.65H16z" fill="#848E9C"></path><path d="M9.5 9.745v-1.65l3.25-3.5 3.25 3.5v1.65H9.5z" fill="url(#sorting-up-color-s24_svg__paint0_linear)"></path><defs><linearGradient id="sorting-up-color-s24_svg__paint0_linear" x1="16" y1="4.594" x2="9.5" y2="4.594" gradientUnits="userSpaceOnUse"><stop stop-color="#EFB80B"></stop><stop offset="1" stop-color="#FBDA3C"></stop></linearGradient></defs></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                        class="sort-up-icon css-lid1rh">
+                                        <path opacity="0.5" d="M16 12.85v1.65L12.75 18 9.5 14.5v-1.65H16z"
+                                            fill="#848E9C"></path>
+                                        <path d="M9.5 9.745v-1.65l3.25-3.5 3.25 3.5v1.65H9.5z"
+                                            fill="url(#sorting-up-color-s24_svg__paint0_linear)"></path>
+                                        <defs>
+                                            <linearGradient id="sorting-up-color-s24_svg__paint0_linear" x1="16"
+                                                y1="4.594" x2="9.5" y2="4.594" gradientUnits="userSpaceOnUse">
+                                                <stop stop-color="#EFB80B"></stop>
+                                                <stop offset="1" stop-color="#FBDA3C"></stop>
+                                            </linearGradient>
+                                        </defs>
+                                    </svg>
                                 </div>
                             </div>
                             <div class="wrap-item" style="flex: 3 1 0px;min-width: 50px;justify-content: flex-end;">
                                 <div class="item">
                                     <div class="text">Price</div>
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="sort-up-icon css-lid1rh"><path opacity="0.5" d="M16 12.85v1.65L12.75 18 9.5 14.5v-1.65H16z" fill="#848E9C"></path><path d="M9.5 9.745v-1.65l3.25-3.5 3.25 3.5v1.65H9.5z" fill="url(#sorting-up-color-s24_svg__paint0_linear)"></path><defs><linearGradient id="sorting-up-color-s24_svg__paint0_linear" x1="16" y1="4.594" x2="9.5" y2="4.594" gradientUnits="userSpaceOnUse"><stop stop-color="#EFB80B"></stop><stop offset="1" stop-color="#FBDA3C"></stop></linearGradient></defs></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                        class="sort-up-icon css-lid1rh">
+                                        <path opacity="0.5" d="M16 12.85v1.65L12.75 18 9.5 14.5v-1.65H16z"
+                                            fill="#848E9C"></path>
+                                        <path d="M9.5 9.745v-1.65l3.25-3.5 3.25 3.5v1.65H9.5z"
+                                            fill="url(#sorting-up-color-s24_svg__paint0_linear)"></path>
+                                        <defs>
+                                            <linearGradient id="sorting-up-color-s24_svg__paint0_linear" x1="16"
+                                                y1="4.594" x2="9.5" y2="4.594" gradientUnits="userSpaceOnUse">
+                                                <stop stop-color="#EFB80B"></stop>
+                                                <stop offset="1" stop-color="#FBDA3C"></stop>
+                                            </linearGradient>
+                                        </defs>
+                                    </svg>
                                 </div>
                             </div>
-                            <div class="wrap-item" style="justify-content: flex-end;">
+                            <div class="wrap-item" style="flex: 5 1 0px; min-width: 60px; justify-content: flex-end;">
                                 <div class="item">
                                     <div class="text">Change</div>
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="sort-up-icon css-lid1rh"><path opacity="0.5" d="M16 12.85v1.65L12.75 18 9.5 14.5v-1.65H16z" fill="#848E9C"></path><path d="M9.5 9.745v-1.65l3.25-3.5 3.25 3.5v1.65H9.5z" fill="url(#sorting-up-color-s24_svg__paint0_linear)"></path><defs><linearGradient id="sorting-up-color-s24_svg__paint0_linear" x1="16" y1="4.594" x2="9.5" y2="4.594" gradientUnits="userSpaceOnUse"><stop stop-color="#EFB80B"></stop><stop offset="1" stop-color="#FBDA3C"></stop></linearGradient></defs></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                        class="sort-up-icon css-lid1rh">
+                                        <path opacity="0.5" d="M16 12.85v1.65L12.75 18 9.5 14.5v-1.65H16z"
+                                            fill="#848E9C"></path>
+                                        <path d="M9.5 9.745v-1.65l3.25-3.5 3.25 3.5v1.65H9.5z"
+                                            fill="url(#sorting-up-color-s24_svg__paint0_linear)"></path>
+                                        <defs>
+                                            <linearGradient id="sorting-up-color-s24_svg__paint0_linear" x1="16"
+                                                y1="4.594" x2="9.5" y2="4.594" gradientUnits="userSpaceOnUse">
+                                                <stop stop-color="#EFB80B"></stop>
+                                                <stop offset="1" stop-color="#FBDA3C"></stop>
+                                            </linearGradient>
+                                        </defs>
+                                    </svg>
                                 </div>
-                                <svg class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="css-d1kzhw"><path d="M9.1 13.11L3.88 7.89l1.41-1.41 3.82-3.82 1.41 1.41L7.7 6.89h11.78v2H7.7l2.81 2.8-1.41 1.42zM14.88 10.89l5.21 5.22-1.41 1.41-3.81 3.82-1.41-1.41 2.82-2.82H4.5v-2h11.78l-2.81-2.8 1.41-1.42z" fill="currentColor"></path></svg>
+                                <svg class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                    fill="currentColor" class="css-d1kzhw">
+                                    <path
+                                        d="M9.1 13.11L3.88 7.89l1.41-1.41 3.82-3.82 1.41 1.41L7.7 6.89h11.78v2H7.7l2.81 2.8-1.41 1.42zM14.88 10.89l5.21 5.22-1.41 1.41-3.81 3.82-1.41-1.41 2.82-2.82H4.5v-2h11.78l-2.81-2.8 1.41-1.42z"
+                                        fill="currentColor"></path>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="market-list-container">
+                        <div class="fixed-size-list">
+                            <div style="height: 6672px; width: 100%;">
+                                <div class="list-item-container">
+                                    <div class="list-item">
+                                        <a class="content" href="">
+                                            <div class="content-item"style="flex: 5 1 0px; justify-content: flex-start; min-width: 120px;">
+                                                <div class="favorite ">
+                                                    <svg style="font-size: 12px; color: rgb(132, 142, 156);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-omng2l">
+                                                        <path
+                                                            d="M21.4 10.8c-.3-1.1-.3-1.1-.7-2.1l-6-.1L12.8 3h-2.2l-2 5.6-5.9.1c-.3 1.1-.3 1.1-.7 2.1l4.8 3.6L5 20.1l1.8 1.3 4.9-3.4 4.9 3.4c.9-.7.9-.6 1.8-1.3l-1.8-5.7 4.8-3.6z"
+                                                            fill="currentColor">
+                                                        </path>
+                                                    </svg>
+                                                </div>
+                                                <div class="item-symbol-text">
+                                                    <span class="item-symbol-ba">BNB</span>
+                                                        <span>/BTC</span>
+                                                        <span class="market-multiple">3x</span></div>
+                                            </div>
+                                            
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
