Trade_coin: Market -  a row in content with 3 columns - Update html, css and add demo36

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -858,7 +858,13 @@
                                                         <span>/BTC</span>
                                                         <span class="market-multiple">3x</span></div>
                                             </div>
-                                            
+                                            <div class="content-item" style="flex: 3 1 0px; min-width: 50px; justify-content: flex-end;">
+                                                <div class="status-green">0.012060</div>
+                                            </div>
+                                            <div class="content-item"
+                                                style="flex: 5 1 0px; min-width: 60px; justify-content: flex-end;">
+                                                <div class="status-green">+0.68%</div>
+                                            </div>
                                         </a>
                                     </div>
                                 </div>
