bootstrap_update-html-css_Source_Code(full-item_CS)_full-blockchain_2_demo:hinh38...

--- a/templates/academy.html
+++ b/templates/academy.html
@@ -915,10 +915,55 @@
                                     <svg viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg" fill="currentColor" id="item_search"><path d="M13.5 2.57457e-06C11.9038 -0.00124001 10.3396 0.447331 8.98664 1.29429C7.6337 2.14125 6.54681 3.35231 5.85056 4.78864C5.15432 6.22496 4.87691 7.82841 5.05014 9.41517C5.22337 11.0019 5.84023 12.5077 6.82999 13.76L0.299988 20.29L1.70999 21.7L8.23999 15.17C9.30415 16.0093 10.5536 16.5818 11.8841 16.8399C13.2146 17.098 14.5875 17.0341 15.8883 16.6535C17.1891 16.273 18.3799 15.5868 19.3615 14.6523C20.3431 13.7178 21.087 12.5621 21.531 11.2816C21.975 10.0011 22.1062 8.63293 21.9138 7.29136C21.7214 5.9498 21.211 4.67371 20.425 3.5696C19.639 2.46549 18.6003 1.56539 17.3957 0.94443C16.191 0.323466 14.8553 -0.000352271 13.5 2.57457e-06ZM13.5 15C12.2144 15 10.9577 14.6188 9.88878 13.9046C8.81986 13.1903 7.98674 12.1752 7.49477 10.9874C7.0028 9.79973 6.87408 8.49279 7.12488 7.23191C7.37569 5.97104 7.99475 4.81285 8.90379 3.90381C9.81283 2.99477 10.971 2.3757 12.2319 2.1249C13.4928 1.87409 14.7997 2.00282 15.9874 2.49479C17.1751 2.98676 18.1903 3.81988 18.9045 4.8888C19.6188 5.95772 20 7.21442 20 8.5C19.9966 10.2229 19.3107 11.8742 18.0925 13.0925C16.8742 14.3108 15.2229 14.9967 13.5 15Z" fill="currentColor"></path></svg>
                                 </div>
                             </div>
-
                         </div>
                     </div>
+                    <div class="Source_Code">
+                        <div class="item_SC">
+                            <div class="text_SC">
+                                <div class="glo">Glossary</div>
+                                <div style="margin-bottom: 16px;">
+                                    <a href="">
+                                        <div class="SC">Source Code</div>
+                                        <div class="line_2"></div>
+                                    </a>
+                                </div>
+                                <div class="text_6">Computer code, which is responsible for defining how software will function based on a list of instructions...</div>
+                                <a href="" style="display: flex;">
+                                    <div class="F_D">
+                                        <div>Full definition</div>
+                                        <div class="conten_2"><svg viewBox="0 0 18 15" class="bidi-element css-1xgr03x e1rk5mue0" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path></svg></div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="Source_Code">
+                        <div class="item_SC">
+                            <div class="text_SC">
+                                <div class="glo">Glossary</div>
+                                <div style="margin-bottom: 16px;">
+                                    <a href="">
+                                        <div class="SC">Offshore account</div>
+                                        <div class="line_2"></div>
+                                    </a>
+                                </div>
+                                <div class="text_6">An account that is registered in a jurisdiction that is different to the jurisdiction of the holder's citiz...</div>
+                                <a href="" style="display: flex;">
+                                    <div class="F_D">
+                                        <div>Full definition</div>
+                                        <div class="conten_2"><svg viewBox="0 0 18 15" class="bidi-element css-1xgr03x e1rk5mue0" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path></svg></div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="no_noise">
+                <div id="body_NN">
+                    <div id="conten_NN">
 
+                    </div>
                 </div>
             </div>
         </div>
