--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -1780,7 +1780,6 @@ body {
 }
 
 #search_3 {
-    padding: 24px 32px;
     padding-left: 0px;
     padding-right: 0px;
     align-self: start;
@@ -1821,4 +1820,110 @@ body {
     top: 12px;
     transition: color 150ms ease-in-out 0s;
     width: 24px;
+}
+
+.Source_Code {
+    position: relative;
+    transition: box-shadow 250ms ease-in 0s;
+    background-color: rgb(43, 47, 54);
+    display: block;
+    padding: 24px;
+    border-radius: 16px;
+    box-shadow: rgb(0 0 0 / 10%) 0px 0px 1px, rgb(0 0 0 / 8%) 0px 7px 14px, rgb(20 21 26 / 8%) 0px 3px 6px;
+}
+
+.item_SC {
+    flex-direction: column;
+    -webkit-box-align: start;
+    align-items: start;
+    height: 100%;
+    display: flex;
+}
+
+.text_SC {
+    flex: 1 1 0%;
+}
+
+.glo {
+    margin-bottom: 16px;
+    align-items: center;
+    border-radius: 100px;
+    display: inline-flex;
+    font-weight: 600;
+    justify-content: center;
+    font-size: 12px;
+    height: 22px;
+    padding: 2px 12px;
+    background-color: rgb(250, 250, 250);
+    color: rgb(20, 21, 26);
+}
+
+.SC {
+    color: rgb(230, 232, 234);
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 40px;
+}
+
+.line_2 {
+    background-color: rgb(240, 185, 11);
+    border-radius: 4px;
+    height: 4px;
+    margin-top: 16px;
+    width: 32px;
+}
+
+.text_6 {
+    color: rgb(230, 232, 234);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.45;
+    margin-bottom: 32px;
+}
+
+.F_D {
+    align-items: center;
+    border: 1px solid transparent;
+    display: inline-flex;
+    font-weight: 500;
+    justify-content: center;
+    white-space: nowrap;
+    outline: 0px;
+    font-size: 14px;
+    height: 40px;
+    line-height: 20px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 8px;
+    background-color: rgb(20, 21, 26);
+    color: rgb(230, 232, 234);
+}
+
+.conten_2 {
+    margin-left: 8px;
+}
+
+.conten_2 svg {
+    vertical-align: middle;
+    width: 16px;
+    height: 16px;
+}
+
+#no_noise {
+    padding-top: 56px;
+    padding-bottom: 56px;
+    background-color: rgb(43, 47, 54);
+}
+
+#body_NN {
+    padding: 0px 16px;
+    max-width: 1136px;
+    margin: auto;
+}
+
+#conten_NN {
+    grid-template-columns: minmax(auto, 332px) 1fr;
+    align-items: center;
+    display: grid;
+    grid-template-rows: auto;
 }
